# sipi_waveform

./: .gitignore  README.md  fft.py  layerpeel.py  setup.cfg  signals.py  sliding_fft.py  tracemath.py  wfm.py
sipi_waveform/: __init__.py  fft.py  hist_load.py  layerpeel.py  prbs.py  signals.py  tracemath.py  util.py  wfm.py
test/: Backplane Eyes Tek MDO CSV Version.ipynb  Backplane Eyes.ipynb  backplane_eyes_cli_version.py  equalized_16gbps_backplane_trace.wfm  random_data_plots.py
