[metadata]
name = sipi_waveform
version = attr: sipi_waveform.__version__
description = Waveform manipulation and mathematics with an SI/PI emphasis
author = Michael Cracraft
author_email = cracraft@rose-hulman.edu
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license_files = LICENSE
project_urls =
  Source = https://github.com/cram869/sipi_waveform

[options]
install_requires =
  numpy
  matplotlib
  scipy
  h5py
  

